base/locust-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  labels:
    name: locust-worker
spec:
  replicas: 5
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      containers:
        - name: locust-worker
          image: locustio/locust
          volumeMounts:
            - name: locust
              mountPath: "/home/locust"
              readOnly: true
      volumes:
        - name: locust
          configMap:
            name: locust
