base/locust-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: locust-master
  labels:
    app: locust-master
spec:
  ports:
    - port: 5557
      targetPort: loc-master-p1
      protocol: TCP
      name: loc-master-p1
    #- port: 5558
    #  targetPort: loc-master-p2
    #  protocol: TCP
    #  name: loc-master-p2
  selector:
    app: locust-master

---
kind: Service
apiVersion: v1
metadata:
  name: locust-master-ui
  labels:
    app: locust-master
spec:
  ports:
    - port: 80
      targetPort: loc-master-web
      protocol: TCP
  #      name: loc-master-web
  #      nodePort: 30627
  selector:
    app: locust-master
  type: LoadBalancer
