base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - benighil.westeurope.cloudapp.azure.com
      secretName: locust-tls
  rules:
    - host: benighil.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-master-ui
                port:
                  number: 8089
